@@ -18,6 +18,7 @@ sensord (0.6.42) unstable; urgency=low
   * Improved FilterApiTests and MetadataTests.
   * Fixed regression from CalibrationHandler: calibration_rate config entry didn't have any effect.
   * Optimized InputDevAdaptor interval handling.
+  * ClientApiTest::testCompassSensor() now tests declination correction.
 
  -- Antti Virtanen <antti.i.virtanen@nokia.com>  Tue, 05 Apr 2011 15:01:35 +0200
 
